[package]
name = "blackfynn"
version = "0.3.0"
authors = ["Blackfynn <https://github.com/Blackfynn/blackfynn-rust>"]
publish = false

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
error-chain = "^0.12"
futures = "^0.1"
hyper = "^0.12"
hyper-tls = "^0.3"
itertools = "^0.8"
lazy_static = "^1.2"
rand = "^0.6"
rusoto_core = "^0.36"
rusoto_credential = "^0.15"
rusoto_s3 = "^0.36"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = "^0.1"
url = "^1.7"
